--- a/public/styles.css
+++ b/public/styles.css
@@ -1535,6 +1535,10 @@ input[type="range"]::-webkit-slider-thumb{
   margin-left: 1.5rem;
 }
 
+.ml-7{
+  margin-left: 1.75rem;
+}
+
 .ml-8{
   margin-left: 2rem;
 }
@@ -1581,6 +1585,10 @@ input[type="range"]::-webkit-slider-thumb{
 
 .mr-2{
   margin-right: 0.5rem;
+}
+
+.mr-3{
+  margin-right: 0.75rem;
 }
 
 .mr-6{
@@ -1631,6 +1639,10 @@ input[type="range"]::-webkit-slider-thumb{
   margin-top: 0.75rem;
 }
 
+.mt-32{
+  margin-top: 8rem;
+}
+
 .mt-36{
   margin-top: 9rem;
 }
@@ -1679,6 +1691,10 @@ input[type="range"]::-webkit-slider-thumb{
   margin-top: 4%;
 }
 
+.mt-\[5\%\]{
+  margin-top: 5%;
+}
+
 .mt-\[6\%\]{
   margin-top: 6%;
 }
@@ -1713,6 +1729,10 @@ input[type="range"]::-webkit-slider-thumb{
 
 .h-12{
   height: 3rem;
+}
+
+.h-24{
+  height: 6rem;
 }
 
 .h-4{
@@ -2022,6 +2042,10 @@ input[type="range"]::-webkit-slider-thumb{
   resize: both;
 }
 
+.list-disc{
+  list-style-type: disc;
+}
+
 .grid-cols-1{
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
@@ -2232,6 +2256,10 @@ input[type="range"]::-webkit-slider-thumb{
   background-image: url('images/back_ground.jpeg');
 }
 
+.bg-cover{
+  background-size: cover;
+}
+
 .bg-no-repeat{
   background-repeat: no-repeat;
 }
@@ -2279,6 +2307,11 @@ input[type="range"]::-webkit-slider-thumb{
 .px-\[10\%\]{
   padding-left: 10%;
   padding-right: 10%;
+}
+
+.px-\[10px\]{
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .py-1{
@@ -2405,6 +2438,10 @@ input[type="range"]::-webkit-slider-thumb{
   color: rgb(235 221 54 / var(--tw-text-opacity));
 }
 
+.text-\[rgba\(255\2c 255\2c 255\2c 0\.7\)\]{
+  color: rgba(255,255,255,0.7);
+}
+
 .text-amber-500{
   --tw-text-opacity: 1;
   color: rgb(245 158 11 / var(--tw-text-opacity));
@@ -2413,6 +2450,10 @@ input[type="range"]::-webkit-slider-thumb{
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.line-through{
+  text-decoration-line: line-through;
 }
 
 .accent-\[\#EBDD36\]{
@@ -2426,6 +2467,12 @@ input[type="range"]::-webkit-slider-thumb{
 .shadow{
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-lg{
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
