--- a/public/styles.css
+++ b/public/styles.css
@@ -743,13 +743,6 @@ select{
   height: 150px;
 }
 
-.stars{
-  display: flex;
-  justify-content: center;
-  margin-top: 4%;
-  color: gold;
-}
-
 .srch{
   display: flex;
   color: gold;
@@ -1257,6 +1250,10 @@ input[type="range"]::-webkit-slider-thumb{
   left: -140px;
 }
 
+.left-\[10\%\]{
+  left: 10%;
+}
+
 .left-\[12px\]{
   left: 12px;
 }
@@ -1267,10 +1264,6 @@ input[type="range"]::-webkit-slider-thumb{
 
 .left-\[22\%\]{
   left: 22%;
-}
-
-.left-\[25\%\]{
-  left: 25%;
 }
 
 .left-\[26\%\]{
@@ -1339,10 +1332,6 @@ input[type="range"]::-webkit-slider-thumb{
 
 .right-0{
   right: 0px;
-}
-
-.right-\[25\%\]{
-  right: 25%;
 }
 
 .top-0{
@@ -1437,8 +1426,12 @@ input[type="range"]::-webkit-slider-thumb{
   top: 73%;
 }
 
-.z-0{
-  z-index: 0;
+.top-\[\]{
+  top: ;
+}
+
+.top-\[3\%\]{
+  top: 3%;
 }
 
 .z-10{
@@ -1465,6 +1458,26 @@ input[type="range"]::-webkit-slider-thumb{
 .my-4{
   margin-top: 1rem;
   margin-bottom: 1rem;
+}
+
+.my-\[2\%\]{
+  margin-top: 2%;
+  margin-bottom: 2%;
+}
+
+.my-10{
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+}
+
+.my-\[10\%\]{
+  margin-top: 10%;
+  margin-bottom: 10%;
+}
+
+.my-\[30\%\]{
+  margin-top: 30%;
+  margin-bottom: 30%;
 }
 
 .mb-1{
@@ -1545,10 +1558,6 @@ input[type="range"]::-webkit-slider-thumb{
 
 .ml-7{
   margin-left: 1.75rem;
-}
-
-.ml-8{
-  margin-left: 2rem;
 }
 
 .ml-\[166px\]{
@@ -1683,20 +1692,12 @@ input[type="range"]::-webkit-slider-thumb{
   margin-top: 2.25rem;
 }
 
-.mt-\[1\%\]{
-  margin-top: 1%;
-}
-
 .mt-\[10\%\]{
   margin-top: 10%;
 }
 
 .mt-\[3\%\]{
   margin-top: 3%;
-}
-
-.mt-\[4\%\]{
-  margin-top: 4%;
 }
 
 .mt-\[5\%\]{
@@ -1707,8 +1708,16 @@ input[type="range"]::-webkit-slider-thumb{
   margin-top: 6%;
 }
 
+.mt-\[8\%\]{
+  margin-top: 8%;
+}
+
 .mt-auto{
   margin-top: auto;
+}
+
+.mb-\[10\%\]{
+  margin-bottom: 10%;
 }
 
 .block{
@@ -1827,12 +1836,28 @@ input[type="range"]::-webkit-slider-thumb{
   height: 80%;
 }
 
+.h-full{
+  height: 100%;
+}
+
 .h-screen{
   height: 100vh;
 }
 
-.min-h-screen{
-  min-height: 100vh;
+.h-\[\]{
+  height: ;
+}
+
+.h-\[95\%\]{
+  height: 95%;
+}
+
+.h-\[20\%\]{
+  height: 20%;
+}
+
+.h-\[93\%\]{
+  height: 93%;
 }
 
 .w-1\/2{
@@ -1857,10 +1882,6 @@ input[type="range"]::-webkit-slider-thumb{
 
 .w-2\/3{
   width: 66.666667%;
-}
-
-.w-20{
-  width: 5rem;
 }
 
 .w-28{
@@ -2005,6 +2026,18 @@ input[type="range"]::-webkit-slider-thumb{
 
 .w-screen{
   width: 100vw;
+}
+
+.w-\[75\%\]{
+  width: 75%;
+}
+
+.w-\[\]{
+  width: ;
+}
+
+.w-\[85\%\]{
+  width: 85%;
 }
 
 .translate-x-7{
@@ -2178,10 +2211,6 @@ input[type="range"]::-webkit-slider-thumb{
   border-width: 1px;
 }
 
-.border-2{
-  border-width: 2px;
-}
-
 .border-\[1px\]{
   border-width: 1px;
 }
@@ -2192,11 +2221,6 @@ input[type="range"]::-webkit-slider-thumb{
 
 .border-solid{
   border-style: solid;
-}
-
-.border-black{
-  --tw-border-opacity: 1;
-  border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
 .border-gray-400{
@@ -2222,10 +2246,6 @@ input[type="range"]::-webkit-slider-thumb{
 .bg-\[rgb\(49\2c 49\2c 49\)\]{
   --tw-bg-opacity: 1;
   background-color: rgb(49 49 49 / var(--tw-bg-opacity));
-}
-
-.bg-\[rgba\(0\2c 0\2c 0\2c 0\.5\)\]{
-  background-color: rgba(0,0,0,0.5);
 }
 
 .bg-\[rgba\(0\2c 0\2c 0\2c 0\.8\)\]{
@@ -2260,10 +2280,6 @@ input[type="range"]::-webkit-slider-thumb{
   background-color: rgb(253 224 71 / var(--tw-bg-opacity));
 }
 
-.bg-\[url\(\'images\/back_ground\.jpeg\'\)\]{
-  background-image: url('images/back_ground.jpeg');
-}
-
 .bg-cover{
   background-size: cover;
 }
@@ -2272,20 +2288,12 @@ input[type="range"]::-webkit-slider-thumb{
   background-repeat: no-repeat;
 }
 
-.p-10{
-  padding: 2.5rem;
-}
-
 .p-4{
   padding: 1rem;
 }
 
 .p-5{
   padding: 1.25rem;
-}
-
-.p-7{
-  padding: 1.75rem;
 }
 
 .p-8{
@@ -2347,6 +2355,36 @@ input[type="range"]::-webkit-slider-thumb{
   padding-bottom: 6px;
 }
 
+.py-\[\]{
+  padding-top: ;
+  padding-bottom: ;
+}
+
+.py-5{
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
+.py-\[2\%\]{
+  padding-top: 2%;
+  padding-bottom: 2%;
+}
+
+.py-\[2\]{
+  padding-top: 2;
+  padding-bottom: 2;
+}
+
+.py-\[10\%\]{
+  padding-top: 10%;
+  padding-bottom: 10%;
+}
+
+.py-10{
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
+
 .pl-2{
   padding-left: 0.5rem;
 }
@@ -2375,10 +2413,6 @@ input[type="range"]::-webkit-slider-thumb{
   text-align: justify;
 }
 
-.align-middle{
-  vertical-align: middle;
-}
-
 .text-2xl{
   font-size: 1.5rem;
   line-height: 2rem;
@@ -2396,11 +2430,6 @@ input[type="range"]::-webkit-slider-thumb{
 
 .text-5xl{
   font-size: 3rem;
-  line-height: 1;
-}
-
-.text-6xl{
-  font-size: 3.75rem;
   line-height: 1;
 }
 
@@ -2466,10 +2495,6 @@ input[type="range"]::-webkit-slider-thumb{
 
 .accent-\[\#EBDD36\]{
   accent-color: #EBDD36;
-}
-
-.accent-red-700{
-  accent-color: #b91c1c;
 }
 
 .shadow{
