--- a/public/styles.css
+++ b/public/styles.css
@@ -645,9 +645,18 @@ select{
   outline: 1px auto -webkit-focus-ring-color;
 }
 
+#bigshadow{
+  display: none;
+  position: fixed;
+  background: rgba(255, 255, 255, 0.1);
+  /* backdrop-filter: blur(5px); */
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 800;
+}
+
 .navbar{
-  /* position: fixed; */
-  /* top: 0; */
   font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: 300;
@@ -942,6 +951,7 @@ select{
 
 #mycart{
   transform: translateX(100%);
+  z-index: 1000;
 }
 
 .bx{
@@ -1053,11 +1063,14 @@ input[type="range"]::-webkit-slider-thumb{
   top: 0;
   left:390px;
   background-color: rgba(255, 255, 255, 0.2);
-  /* Adjust the alpha value for opacity */
   -webkit-backdrop-filter: blur(15px);
           backdrop-filter: blur(15px);
   border-radius: 30px;
   z-index: -2;
+}
+
+.naviframe a.active {
+  color: #EBDD36;
 }
 
 *, ::before, ::after{
@@ -1426,20 +1439,16 @@ input[type="range"]::-webkit-slider-thumb{
   top: 73%;
 }
 
-.top-\[\]{
-  top: ;
-}
-
-.top-\[3\%\]{
-  top: 3%;
-}
-
 .z-10{
   z-index: 10;
 }
 
 .z-20{
   z-index: 20;
+}
+
+.z-30{
+  z-index: 30;
 }
 
 .z-50{
@@ -1458,26 +1467,6 @@ input[type="range"]::-webkit-slider-thumb{
 .my-4{
   margin-top: 1rem;
   margin-bottom: 1rem;
-}
-
-.my-\[2\%\]{
-  margin-top: 2%;
-  margin-bottom: 2%;
-}
-
-.my-10{
-  margin-top: 2.5rem;
-  margin-bottom: 2.5rem;
-}
-
-.my-\[10\%\]{
-  margin-top: 10%;
-  margin-bottom: 10%;
-}
-
-.my-\[30\%\]{
-  margin-top: 30%;
-  margin-bottom: 30%;
 }
 
 .mb-1{
@@ -1708,16 +1697,8 @@ input[type="range"]::-webkit-slider-thumb{
   margin-top: 6%;
 }
 
-.mt-\[8\%\]{
-  margin-top: 8%;
-}
-
 .mt-auto{
   margin-top: auto;
-}
-
-.mb-\[10\%\]{
-  margin-bottom: 10%;
 }
 
 .block{
@@ -1842,22 +1823,6 @@ input[type="range"]::-webkit-slider-thumb{
 
 .h-screen{
   height: 100vh;
-}
-
-.h-\[\]{
-  height: ;
-}
-
-.h-\[95\%\]{
-  height: 95%;
-}
-
-.h-\[20\%\]{
-  height: 20%;
-}
-
-.h-\[93\%\]{
-  height: 93%;
 }
 
 .w-1\/2{
@@ -2026,18 +1991,6 @@ input[type="range"]::-webkit-slider-thumb{
 
 .w-screen{
   width: 100vw;
-}
-
-.w-\[75\%\]{
-  width: 75%;
-}
-
-.w-\[\]{
-  width: ;
-}
-
-.w-\[85\%\]{
-  width: 85%;
 }
 
 .translate-x-7{
@@ -2353,36 +2306,6 @@ input[type="range"]::-webkit-slider-thumb{
 .py-\[6px\]{
   padding-top: 6px;
   padding-bottom: 6px;
-}
-
-.py-\[\]{
-  padding-top: ;
-  padding-bottom: ;
-}
-
-.py-5{
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
-}
-
-.py-\[2\%\]{
-  padding-top: 2%;
-  padding-bottom: 2%;
-}
-
-.py-\[2\]{
-  padding-top: 2;
-  padding-bottom: 2;
-}
-
-.py-\[10\%\]{
-  padding-top: 10%;
-  padding-bottom: 10%;
-}
-
-.py-10{
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
 }
 
 .pl-2{
