--- a/src/styles.css
+++ b/src/styles.css
@@ -12,9 +12,19 @@
 }
 
 @layer base{
+
+  
+    #bigshadow{
+        display: none;
+        position: fixed;
+        background: rgba(255, 255, 255, 0.1); 
+        /* backdrop-filter: blur(5px); */
+        top: 0;
+        left: 0;
+        width: 100%;
+        z-index: 800;
+    }
     .navbar{
-        /* position: fixed; */
-        /* top: 0; */
         font-family: "Roboto", sans-serif;
         font-weight: 100;
         font-style: normal;
@@ -280,6 +290,7 @@
     }
     #mycart{
         transform: translateX(100%);
+        z-index: 1000;
     }
     .bx{
         font-size: 20px;
@@ -380,10 +391,13 @@
         height: 400px;
         top: 0;
         left:390px;
-        background-color: rgba(255, 255, 255, 0.2); /* Adjust the alpha value for opacity */
+        background-color: rgba(255, 255, 255, 0.2); 
         backdrop-filter: blur(15px);  
         border-radius: 30px;
         z-index: -2;
     }
-   
+    .naviframe a.active {
+        color: #EBDD36;
+    }
+
 }
