--- a/public/styles.css
+++ b/public/styles.css
@@ -2100,6 +2100,10 @@ input[type="range"]::-webkit-slider-thumb{
   gap: 1.5rem;
 }
 
+.gap-2{
+  gap: 0.5rem;
+}
+
 .overflow-hidden{
   overflow: hidden;
 }
