--- a/src/styles.css
+++ b/src/styles.css
@@ -399,5 +399,20 @@
     .naviframe a.active {
         color: #EBDD36;
     }
+    
+
+    .email_exist{
+        display: none;
+    }
+    .pass_box{
+        display: none;
+    }
+    .strengh_pass{
+        display: none;
+    }
+
+    .image_side{
+        border-radius: 30px 0 0 30px ;
+    }
 
 }
