--- a/public/styles.css
+++ b/public/styles.css
@@ -656,12 +656,6 @@ select{
   z-index: 800;
 }
 
-.navbar{
-  font-family: "Roboto", sans-serif;
-  font-style: normal;
-  font-weight: 300;
-}
-
 .cask{
   top: 50%;
   left: 50%;
@@ -809,6 +803,11 @@ select{
   z-index: 1;
 }
 
+.srech1:hover{
+  /* background-color: rgba(255, 255, 255, 0.5); */
+  color: black;
+}
+
 .srech1:nth-child(2n+1){
   background: rgb(44, 41, 36);
 }
@@ -833,6 +832,11 @@ select{
 .color_back{
   background: linear-gradient(rgb(245, 224, 108),rgb(247, 210, 6));
   border-radius: 20px;
+}
+
+.\!result{
+  font-family: Arial, Helvetica, sans-serif !important;
+  font-style: italic !important;
 }
 
 .result{
@@ -889,7 +893,7 @@ select{
 }
 
 .namepr{
-  width: 60%;
+  width: 40%;
 }
 
 .bx-trash{
@@ -1071,6 +1075,49 @@ input[type="range"]::-webkit-slider-thumb{
 
 .naviframe a.active {
   color: #EBDD36;
+}
+
+.result-box{
+  position: fixed;
+  top: 90px;
+  width: 300px;
+  background: rgb(49, 49, 49);
+  max-height: 555px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+.result-box ul{
+  border-top: 1px solid #999;
+  padding: 15px 10px;
+}
+
+.result-box ul li{
+  list-style: none;
+  border-radius: 3px;
+  padding: 5px 5px;
+  cursor: pointer;
+}
+
+.result-box ul li:hover{
+  background: rgba(255, 255, 255, 0.5);
+  color: black;
+}
+
+.h1div{
+  width: 115px;
+  font-size: x-large;
+}
+
+.searchbar{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.searchbar img{
+  width: 100px;
+  height: 100px;
 }
 
 *, ::before, ::after{
@@ -1597,6 +1644,10 @@ input[type="range"]::-webkit-slider-thumb{
   margin-right: 0.75rem;
 }
 
+.mr-5{
+  margin-right: 1.25rem;
+}
+
 .mr-6{
   margin-right: 1.5rem;
 }
@@ -1685,10 +1736,6 @@ input[type="range"]::-webkit-slider-thumb{
   margin-top: 10%;
 }
 
-.mt-\[20px\]{
-  margin-top: 20px;
-}
-
 .mt-\[3\%\]{
   margin-top: 3%;
 }
@@ -1699,10 +1746,6 @@ input[type="range"]::-webkit-slider-thumb{
 
 .mt-\[6\%\]{
   margin-top: 6%;
-}
-
-.mt-\[9px\]{
-  margin-top: 9px;
 }
 
 .mt-auto{
@@ -1735,10 +1778,6 @@ input[type="range"]::-webkit-slider-thumb{
 
 .h-12{
   height: 3rem;
-}
-
-.h-24{
-  height: 6rem;
 }
 
 .h-4{
@@ -1897,6 +1936,10 @@ input[type="range"]::-webkit-slider-thumb{
   width: 66.666667%;
 }
 
+.w-\[100\%\]{
+  width: 100%;
+}
+
 .w-\[110px\]{
   width: 110px;
 }
@@ -1935,6 +1978,10 @@ input[type="range"]::-webkit-slider-thumb{
 
 .w-\[30\%\]{
   width: 30%;
+}
+
+.w-\[300px\]{
+  width: 300px;
 }
 
 .w-\[31\%\]{
@@ -1999,6 +2046,10 @@ input[type="range"]::-webkit-slider-thumb{
 
 .w-screen{
   width: 100vw;
+}
+
+.w-20{
+  width: 5rem;
 }
 
 .translate-x-7{
@@ -2110,10 +2161,6 @@ input[type="range"]::-webkit-slider-thumb{
 
 .gap-6{
   gap: 1.5rem;
-}
-
-.gap-2{
-  gap: 0.5rem;
 }
 
 .overflow-hidden{
@@ -2483,6 +2530,14 @@ input[type="range"]::-webkit-slider-thumb{
   display: none;
 }
 
+.placeholder\:text-\[rgba\(235\2c 221\2c 54\2c 0\.5\)\]::-moz-placeholder{
+  color: rgba(235,221,54,0.5);
+}
+
+.placeholder\:text-\[rgba\(235\2c 221\2c 54\2c 0\.5\)\]::placeholder{
+  color: rgba(235,221,54,0.5);
+}
+
 .placeholder\:text-gray-100::-moz-placeholder{
   --tw-text-opacity: 1;
   color: rgb(243 244 246 / var(--tw-text-opacity));
@@ -2515,6 +2570,11 @@ input[type="range"]::-webkit-slider-thumb{
 
 .hover\:cursor-pointer:hover{
   cursor: pointer;
+}
+
+.hover\:bg-\[rgb\(255\2c 255\2c 255\)\]:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-yellow-400:hover{
