--- a/src/styles.css
+++ b/src/styles.css
@@ -403,7 +403,6 @@
     .naviframe a.active {
         color: #EBDD36;
     }
-<<<<<<< HEAD
     .result-box{
         position: fixed;
         top: 90px;
@@ -439,9 +438,8 @@
     .searchbar img{
         width: 100px;
         height: 100px;
-=======
     
-
+    }
     .email_exist{
         display: none;
     }
@@ -454,7 +452,6 @@
 
     .image_side{
         border-radius: 30px 0 0 30px ;
->>>>>>> 51e6f2fb7c674f7cf08cfa2ba4902c457370ae99
     }
 
 }
