--- a/public/styles.css
+++ b/public/styles.css
@@ -1085,6 +1085,10 @@ input[type="range"]::-webkit-slider-thumb{
   border-radius: 30px 0 0 30px ;
 }
 
+.outt {
+  display: none !important;
+}
+
 *, ::before, ::after{
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
@@ -1267,6 +1271,10 @@ input[type="range"]::-webkit-slider-thumb{
   left: 0px;
 }
 
+.left-5{
+  left: 1.25rem;
+}
+
 .left-8{
   left: 2rem;
 }
@@ -1319,6 +1327,10 @@ input[type="range"]::-webkit-slider-thumb{
   left: 42%;
 }
 
+.left-\[47\%\]{
+  left: 47%;
+}
+
 .left-\[5\%\]{
   left: 5%;
 }
@@ -1359,8 +1371,24 @@ input[type="range"]::-webkit-slider-thumb{
   right: 0px;
 }
 
+.right-5{
+  right: 1.25rem;
+}
+
+.right-\[48px\]{
+  right: 48px;
+}
+
+.right-\[88px\]{
+  right: 88px;
+}
+
 .top-0{
   top: 0px;
+}
+
+.top-2{
+  top: 0.5rem;
 }
 
 .top-3{
@@ -1411,6 +1439,14 @@ input[type="range"]::-webkit-slider-thumb{
   top: 27%;
 }
 
+.top-\[30\%\]{
+  top: 30%;
+}
+
+.top-\[30px\]{
+  top: 30px;
+}
+
 .top-\[37\%\]{
   top: 37%;
 }
@@ -1449,6 +1485,10 @@ input[type="range"]::-webkit-slider-thumb{
 
 .top-\[73\%\]{
   top: 73%;
+}
+
+.top-\[90px\]{
+  top: 90px;
 }
 
 .z-10{
@@ -1561,6 +1601,10 @@ input[type="range"]::-webkit-slider-thumb{
   margin-left: 1.75rem;
 }
 
+.ml-9{
+  margin-left: 2.25rem;
+}
+
 .ml-\[166px\]{
   margin-left: 166px;
 }
@@ -1577,12 +1621,20 @@ input[type="range"]::-webkit-slider-thumb{
   margin-left: 20%;
 }
 
+.ml-\[27\%\]{
+  margin-left: 27%;
+}
+
 .ml-\[3\%\]{
   margin-left: 3%;
 }
 
 .ml-\[32px\]{
   margin-left: 32px;
+}
+
+.ml-\[33\%\]{
+  margin-left: 33%;
 }
 
 .ml-\[4\%\]{
@@ -1605,6 +1657,10 @@ input[type="range"]::-webkit-slider-thumb{
   margin-left: auto;
 }
 
+.mr-12{
+  margin-right: 3rem;
+}
+
 .mr-2{
   margin-right: 0.5rem;
 }
@@ -1615,6 +1671,10 @@ input[type="range"]::-webkit-slider-thumb{
 
 .mr-6{
   margin-right: 1.5rem;
+}
+
+.mr-7{
+  margin-right: 1.75rem;
 }
 
 .mr-\[12\%\]{
@@ -1717,6 +1777,10 @@ input[type="range"]::-webkit-slider-thumb{
   margin-top: 6%;
 }
 
+.mt-\[60px\]{
+  margin-top: 60px;
+}
+
 .mt-\[9px\]{
   margin-top: 9px;
 }
@@ -1753,6 +1817,18 @@ input[type="range"]::-webkit-slider-thumb{
   height: 3rem;
 }
 
+.h-14{
+  height: 3.5rem;
+}
+
+.h-16{
+  height: 4rem;
+}
+
+.h-20{
+  height: 5rem;
+}
+
 .h-24{
   height: 6rem;
 }
@@ -1787,6 +1863,10 @@ input[type="range"]::-webkit-slider-thumb{
 
 .h-\[120px\]{
   height: 120px;
+}
+
+.h-\[168px\]{
+  height: 168px;
 }
 
 .h-\[171px\]{
@@ -1877,6 +1957,14 @@ input[type="range"]::-webkit-slider-thumb{
   width: 91.666667%;
 }
 
+.w-12{
+  width: 3rem;
+}
+
+.w-16{
+  width: 4rem;
+}
+
 .w-2\/3{
   width: 66.666667%;
 }
@@ -1899,6 +1987,10 @@ input[type="range"]::-webkit-slider-thumb{
 
 .w-40{
   width: 10rem;
+}
+
+.w-44{
+  width: 11rem;
 }
 
 .w-5{
@@ -1941,8 +2033,16 @@ input[type="range"]::-webkit-slider-thumb{
   width: 21%;
 }
 
+.w-\[238px\]{
+  width: 238px;
+}
+
 .w-\[240px\]{
   width: 240px;
+}
+
+.w-\[250px\]{
+  width: 250px;
 }
 
 .w-\[26\%\]{
@@ -2017,12 +2117,24 @@ input[type="range"]::-webkit-slider-thumb{
   width: 90%;
 }
 
+.w-\[96\%\]{
+  width: 96%;
+}
+
 .w-full{
   width: 100%;
 }
 
 .w-screen{
   width: 100vw;
+}
+
+.table-auto{
+  table-layout: auto;
+}
+
+.border-collapse{
+  border-collapse: collapse;
 }
 
 .translate-x-7{
@@ -2064,6 +2176,10 @@ input[type="range"]::-webkit-slider-thumb{
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.cursor-pointer{
+  cursor: pointer;
+}
+
 .resize{
   resize: both;
 }
@@ -2100,6 +2216,10 @@ input[type="range"]::-webkit-slider-thumb{
   align-items: center;
 }
 
+.justify-start{
+  justify-content: flex-start;
+}
+
 .justify-center{
   justify-content: center;
 }
@@ -2128,12 +2248,20 @@ input[type="range"]::-webkit-slider-thumb{
   gap: 0.5rem;
 }
 
+.gap-4{
+  gap: 1rem;
+}
+
 .gap-5{
   gap: 1.25rem;
 }
 
 .gap-6{
   gap: 1.5rem;
+}
+
+.gap-7{
+  gap: 1.75rem;
 }
 
 .overflow-hidden{
@@ -2168,6 +2296,10 @@ input[type="range"]::-webkit-slider-thumb{
   border-radius: 20px;
 }
 
+.rounded-\[22px\]{
+  border-radius: 22px;
+}
+
 .rounded-\[30px\]{
   border-radius: 30px;
 }
@@ -2178,6 +2310,10 @@ input[type="range"]::-webkit-slider-thumb{
 
 .rounded-\[50\%\]{
   border-radius: 50%;
+}
+
+.rounded-\[50px\]{
+  border-radius: 50px;
 }
 
 .rounded-\[5px\]{
@@ -2212,6 +2348,11 @@ input[type="range"]::-webkit-slider-thumb{
   border-style: solid;
 }
 
+.border-slate-500{
+  --tw-border-opacity: 1;
+  border-color: rgb(100 116 139 / var(--tw-border-opacity));
+}
+
 .border-white{
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
@@ -2240,9 +2381,19 @@ input[type="range"]::-webkit-slider-thumb{
   background-color: rgba(255,255,255,0.2);
 }
 
+.bg-\[rgba\(49\2c 49\2c 49\)\]{
+  --tw-bg-opacity: 1;
+  background-color: rgba(49, 49, 49, var(--tw-bg-opacity));
+}
+
 .bg-\[rgba\(60\2c 60\2c 60\)\]{
   --tw-bg-opacity: 1;
   background-color: rgba(60, 60, 60, var(--tw-bg-opacity));
+}
+
+.bg-blue-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
 }
 
 .bg-red-200{
@@ -2250,9 +2401,19 @@ input[type="range"]::-webkit-slider-thumb{
   background-color: rgb(254 202 202 / var(--tw-bg-opacity));
 }
 
+.bg-red-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
 .bg-red-600{
   --tw-bg-opacity: 1;
   background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+}
+
+.bg-slate-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(71 85 105 / var(--tw-bg-opacity));
 }
 
 .bg-transparent{
@@ -2267,6 +2428,16 @@ input[type="range"]::-webkit-slider-thumb{
 .bg-yellow-300{
   --tw-bg-opacity: 1;
   background-color: rgb(253 224 71 / var(--tw-bg-opacity));
+}
+
+.bg-slate-400{
+  --tw-bg-opacity: 1;
+  background-color: rgb(148 163 184 / var(--tw-bg-opacity));
+}
+
+.bg-slate-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(100 116 139 / var(--tw-bg-opacity));
 }
 
 .bg-cover{
@@ -2309,6 +2480,11 @@ input[type="range"]::-webkit-slider-thumb{
   padding-right: 1rem;
 }
 
+.px-5{
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
 .px-\[10\%\]{
   padding-left: 10%;
   padding-right: 10%;
@@ -2339,9 +2515,18 @@ input[type="range"]::-webkit-slider-thumb{
   padding-bottom: 0.5rem;
 }
 
+.py-4{
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
 .py-\[6px\]{
   padding-top: 6px;
   padding-bottom: 6px;
+}
+
+.pb-3{
+  padding-bottom: 0.75rem;
 }
 
 .pl-2{
@@ -2350,6 +2535,10 @@ input[type="range"]::-webkit-slider-thumb{
 
 .pl-3{
   padding-left: 0.75rem;
+}
+
+.pl-8{
+  padding-left: 2rem;
 }
 
 .pl-\[100px\]{
@@ -2362,6 +2551,14 @@ input[type="range"]::-webkit-slider-thumb{
 
 .pl-\[40px\]{
   padding-left: 40px;
+}
+
+.pr-8{
+  padding-right: 2rem;
+}
+
+.pt-3{
+  padding-top: 0.75rem;
 }
 
 .text-center{
@@ -2407,6 +2604,11 @@ input[type="range"]::-webkit-slider-thumb{
   line-height: 1.75rem;
 }
 
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
 .text-xl{
   font-size: 1.25rem;
   line-height: 1.75rem;
@@ -2423,6 +2625,10 @@ input[type="range"]::-webkit-slider-thumb{
 
 .font-medium{
   font-weight: 500;
+}
+
+.font-normal{
+  font-weight: 400;
 }
 
 .font-semibold{
@@ -2443,9 +2649,24 @@ input[type="range"]::-webkit-slider-thumb{
   color: rgb(245 158 11 / var(--tw-text-opacity));
 }
 
+.text-gray-400{
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
 .text-red-400{
   --tw-text-opacity: 1;
   color: rgb(248 113 113 / var(--tw-text-opacity));
+}
+
+.text-slate-200{
+  --tw-text-opacity: 1;
+  color: rgb(226 232 240 / var(--tw-text-opacity));
+}
+
+.text-slate-300{
+  --tw-text-opacity: 1;
+  color: rgb(203 213 225 / var(--tw-text-opacity));
 }
 
 .text-white{
