--- a/public/styles.css
+++ b/public/styles.css
@@ -1077,48 +1077,6 @@ input[type="range"]::-webkit-slider-thumb{
   color: #EBDD36;
 }
 
-.result-box{
-  position: fixed;
-  top: 90px;
-  width: 300px;
-  background: rgb(49, 49, 49);
-  max-height: 555px;
-  overflow-y: scroll;
-  overflow-x: hidden;
-}
-
-.result-box ul{
-  border-top: 1px solid #999;
-  padding: 15px 10px;
-}
-
-.result-box ul li{
-  list-style: none;
-  border-radius: 3px;
-  padding: 5px 5px;
-  cursor: pointer;
-}
-
-.result-box ul li:hover{
-  background: rgba(255, 255, 255, 0.5);
-  color: black;
-}
-
-.h1div{
-  width: 115px;
-  font-size: x-large;
-}
-
-.searchbar{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.searchbar img{
-  width: 100px;
-  height: 100px;
-}
 .email_exist{
   display: none;
 }
@@ -1823,17 +1781,10 @@ input[type="range"]::-webkit-slider-thumb{
   margin-top: 6%;
 }
 
-<<<<<<< HEAD
 .mt-\[60px\]{
   margin-top: 60px;
 }
 
-.mt-\[9px\]{
-  margin-top: 9px;
-}
-
-=======
->>>>>>> d710879c2af7e59519bef3e52ba3dd6b73e52601
 .mt-auto{
   margin-top: auto;
 }
@@ -1866,7 +1817,6 @@ input[type="range"]::-webkit-slider-thumb{
   height: 3rem;
 }
 
-<<<<<<< HEAD
 .h-14{
   height: 3.5rem;
 }
@@ -1879,12 +1829,6 @@ input[type="range"]::-webkit-slider-thumb{
   height: 5rem;
 }
 
-.h-24{
-  height: 6rem;
-}
-
-=======
->>>>>>> d710879c2af7e59519bef3e52ba3dd6b73e52601
 .h-4{
   height: 1rem;
 }
@@ -2019,6 +1963,10 @@ input[type="range"]::-webkit-slider-thumb{
 
 .w-2\/3{
   width: 66.666667%;
+}
+
+.w-20{
+  width: 5rem;
 }
 
 .w-28{
@@ -2189,17 +2137,12 @@ input[type="range"]::-webkit-slider-thumb{
   width: 100vw;
 }
 
-<<<<<<< HEAD
 .table-auto{
   table-layout: auto;
 }
 
 .border-collapse{
   border-collapse: collapse;
-=======
-.w-20{
-  width: 5rem;
->>>>>>> d710879c2af7e59519bef3e52ba3dd6b73e52601
 }
 
 .translate-x-7{
@@ -2433,6 +2376,11 @@ input[type="range"]::-webkit-slider-thumb{
   background-color: rgb(221 221 221 / var(--tw-bg-opacity));
 }
 
+.bg-\[rgb\(0\2c 0\2c 0\)\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
 .bg-\[rgb\(49\2c 49\2c 49\)\]{
   --tw-bg-opacity: 1;
   background-color: rgb(49 49 49 / var(--tw-bg-opacity));
@@ -2476,6 +2424,11 @@ input[type="range"]::-webkit-slider-thumb{
   background-color: rgb(220 38 38 / var(--tw-bg-opacity));
 }
 
+.bg-slate-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(100 116 139 / var(--tw-bg-opacity));
+}
+
 .bg-slate-600{
   --tw-bg-opacity: 1;
   background-color: rgb(71 85 105 / var(--tw-bg-opacity));
@@ -2493,16 +2446,6 @@ input[type="range"]::-webkit-slider-thumb{
 .bg-yellow-300{
   --tw-bg-opacity: 1;
   background-color: rgb(253 224 71 / var(--tw-bg-opacity));
-}
-
-.bg-slate-400{
-  --tw-bg-opacity: 1;
-  background-color: rgb(148 163 184 / var(--tw-bg-opacity));
-}
-
-.bg-slate-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(100 116 139 / var(--tw-bg-opacity));
 }
 
 .bg-cover{
