--- a/public/styles.css
+++ b/public/styles.css
@@ -1136,6 +1136,14 @@ input[type="range"]::-webkit-slider-thumb{
   display: none !important;
 }
 
+.searchadmin{
+  position: relative;
+  font-size: 25px;
+  font-weight: lighter;
+  top: 5px;
+  color: rgba(255, 255, 255, 0.8);
+}
+
 *, ::before, ::after{
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
@@ -1318,8 +1326,8 @@ input[type="range"]::-webkit-slider-thumb{
   left: 0px;
 }
 
-.left-5{
-  left: 1.25rem;
+.left-2{
+  left: 0.5rem;
 }
 
 .left-8{
@@ -1538,6 +1546,10 @@ input[type="range"]::-webkit-slider-thumb{
   top: 90px;
 }
 
+.left-4{
+  left: 1rem;
+}
+
 .z-10{
   z-index: 10;
 }
@@ -1566,6 +1578,11 @@ input[type="range"]::-webkit-slider-thumb{
 .my-4{
   margin-top: 1rem;
   margin-bottom: 1rem;
+}
+
+.my-auto{
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .mb-1{
@@ -1602,6 +1619,10 @@ input[type="range"]::-webkit-slider-thumb{
 
 .mb-\[-20px\]{
   margin-bottom: -20px;
+}
+
+.mb-auto{
+  margin-bottom: auto;
 }
 
 .ml-10{
@@ -1652,6 +1673,14 @@ input[type="range"]::-webkit-slider-thumb{
   margin-left: 2.25rem;
 }
 
+.ml-\[100px\]{
+  margin-left: 100px;
+}
+
+.ml-\[140px\]{
+  margin-left: 140px;
+}
+
 .ml-\[166px\]{
   margin-left: 166px;
 }
@@ -1672,6 +1701,10 @@ input[type="range"]::-webkit-slider-thumb{
   margin-left: 27%;
 }
 
+.ml-\[270px\]{
+  margin-left: 270px;
+}
+
 .ml-\[3\%\]{
   margin-left: 3%;
 }
@@ -1680,12 +1713,12 @@ input[type="range"]::-webkit-slider-thumb{
   margin-left: 32px;
 }
 
-.ml-\[33\%\]{
-  margin-left: 33%;
-}
-
 .ml-\[4\%\]{
   margin-left: 4%;
+}
+
+.ml-\[50px\]{
+  margin-left: 50px;
 }
 
 .ml-\[54\%\]{
@@ -1716,6 +1749,10 @@ input[type="range"]::-webkit-slider-thumb{
   margin-right: 0.75rem;
 }
 
+.mr-4{
+  margin-right: 1rem;
+}
+
 .mr-5{
   margin-right: 1.25rem;
 }
@@ -1734,6 +1771,14 @@ input[type="range"]::-webkit-slider-thumb{
 
 .mr-\[15\%\]{
   margin-right: 15%;
+}
+
+.mr-\[160px\]{
+  margin-right: 160px;
+}
+
+.mr-\[250px\]{
+  margin-right: 250px;
 }
 
 .mr-auto{
@@ -1824,17 +1869,10 @@ input[type="range"]::-webkit-slider-thumb{
   margin-top: 6%;
 }
 
-<<<<<<< HEAD
 .mt-\[60px\]{
   margin-top: 60px;
 }
 
-.mt-\[9px\]{
-  margin-top: 9px;
-}
-
-=======
->>>>>>> d710879c2af7e59519bef3e52ba3dd6b73e52601
 .mt-auto{
   margin-top: auto;
 }
@@ -1871,7 +1909,6 @@ input[type="range"]::-webkit-slider-thumb{
   height: 3rem;
 }
 
-<<<<<<< HEAD
 .h-14{
   height: 3.5rem;
 }
@@ -1884,12 +1921,6 @@ input[type="range"]::-webkit-slider-thumb{
   height: 5rem;
 }
 
-.h-24{
-  height: 6rem;
-}
-
-=======
->>>>>>> d710879c2af7e59519bef3e52ba3dd6b73e52601
 .h-4{
   height: 1rem;
 }
@@ -1920,6 +1951,14 @@ input[type="range"]::-webkit-slider-thumb{
 
 .h-\[120px\]{
   height: 120px;
+}
+
+.h-\[150px\]{
+  height: 150px;
+}
+
+.h-\[160px\]{
+  height: 160px;
 }
 
 .h-\[168px\]{
@@ -1958,6 +1997,10 @@ input[type="range"]::-webkit-slider-thumb{
   height: 405px;
 }
 
+.h-\[40px\]{
+  height: 40px;
+}
+
 .h-\[457px\]{
   height: 457px;
 }
@@ -1976,6 +2019,10 @@ input[type="range"]::-webkit-slider-thumb{
 
 .h-\[55px\]{
   height: 55px;
+}
+
+.h-\[565px\]{
+  height: 565px;
 }
 
 .h-\[5px\]{
@@ -2082,6 +2129,10 @@ input[type="range"]::-webkit-slider-thumb{
   width: 100%;
 }
 
+.w-\[1000px\]{
+  width: 1000px;
+}
+
 .w-\[100px\]{
   width: 100px;
 }
@@ -2098,8 +2149,16 @@ input[type="range"]::-webkit-slider-thumb{
   width: 120px;
 }
 
+.w-\[150px\]{
+  width: 150px;
+}
+
 .w-\[17px\]{
   width: 17px;
+}
+
+.w-\[180px\]{
+  width: 180px;
 }
 
 .w-\[21\%\]{
@@ -2154,6 +2213,10 @@ input[type="range"]::-webkit-slider-thumb{
   width: 37%;
 }
 
+.w-\[400px\]{
+  width: 400px;
+}
+
 .w-\[50\%\]{
   width: 50%;
 }
@@ -2164,6 +2227,10 @@ input[type="range"]::-webkit-slider-thumb{
 
 .w-\[50px\]{
   width: 50px;
+}
+
+.w-\[600px\]{
+  width: 600px;
 }
 
 .w-\[60px\]{
@@ -2198,6 +2265,10 @@ input[type="range"]::-webkit-slider-thumb{
   width: 90%;
 }
 
+.w-\[900px\]{
+  width: 900px;
+}
+
 .w-\[96\%\]{
   width: 96%;
 }
@@ -2210,22 +2281,14 @@ input[type="range"]::-webkit-slider-thumb{
   width: 100vw;
 }
 
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
 .table-auto{
   table-layout: auto;
 }
 
 .border-collapse{
   border-collapse: collapse;
-=======
-.w-20{
-  width: 5rem;
->>>>>>> d710879c2af7e59519bef3e52ba3dd6b73e52601
 }
 
->>>>>>> 6519ecac6a0afc8a42988521098caad6aafb666b
 .translate-x-7{
   --tw-translate-x: 1.75rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -2365,6 +2428,14 @@ input[type="range"]::-webkit-slider-thumb{
   overflow-x: hidden;
 }
 
+.overflow-y-hidden{
+  overflow-y: hidden;
+}
+
+.overflow-y-scroll{
+  overflow-y: scroll;
+}
+
 .rounded-2xl{
   border-radius: 1rem;
 }
@@ -2441,15 +2512,23 @@ input[type="range"]::-webkit-slider-thumb{
   border-style: solid;
 }
 
-<<<<<<< HEAD
+.border-none{
+  border-style: none;
+}
+
 .border-black{
   --tw-border-opacity: 1;
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
-=======
+}
+
 .border-slate-500{
   --tw-border-opacity: 1;
   border-color: rgb(100 116 139 / var(--tw-border-opacity));
->>>>>>> ff1c87a9cd17cf414c5f7513c459d8c8a2085692
+}
+
+.border-slate-600{
+  --tw-border-opacity: 1;
+  border-color: rgb(71 85 105 / var(--tw-border-opacity));
 }
 
 .border-white{
@@ -2467,9 +2546,18 @@ input[type="range"]::-webkit-slider-thumb{
   background-color: rgb(221 221 221 / var(--tw-bg-opacity));
 }
 
+.bg-\[rgb\(36\2c 48\2c 63\)\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(36 48 63 / var(--tw-bg-opacity));
+}
+
 .bg-\[rgb\(49\2c 49\2c 49\)\]{
   --tw-bg-opacity: 1;
   background-color: rgb(49 49 49 / var(--tw-bg-opacity));
+}
+
+.bg-\[rgba\(0\2c 0\2c 0\2c 0\.5\)\]{
+  background-color: rgba(0,0,0,0.5);
 }
 
 .bg-\[rgba\(0\2c 0\2c 0\2c 0\.8\)\]{
@@ -2490,9 +2578,19 @@ input[type="range"]::-webkit-slider-thumb{
   background-color: rgba(60, 60, 60, var(--tw-bg-opacity));
 }
 
+.bg-blue-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+}
+
 .bg-blue-600{
   --tw-bg-opacity: 1;
   background-color: rgb(37 99 235 / var(--tw-bg-opacity));
+}
+
+.bg-green-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
 }
 
 .bg-red-200{
@@ -2508,6 +2606,11 @@ input[type="range"]::-webkit-slider-thumb{
 .bg-red-600{
   --tw-bg-opacity: 1;
   background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+}
+
+.bg-slate-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(100 116 139 / var(--tw-bg-opacity));
 }
 
 .bg-slate-600{
@@ -2529,22 +2632,16 @@ input[type="range"]::-webkit-slider-thumb{
   background-color: rgb(253 224 71 / var(--tw-bg-opacity));
 }
 
-.bg-slate-400{
-  --tw-bg-opacity: 1;
-  background-color: rgb(148 163 184 / var(--tw-bg-opacity));
-}
-
-.bg-slate-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(100 116 139 / var(--tw-bg-opacity));
-}
-
 .bg-cover{
   background-size: cover;
 }
 
 .bg-no-repeat{
   background-repeat: no-repeat;
+}
+
+.p-1{
+  padding: 0.25rem;
 }
 
 .p-4{
@@ -2650,6 +2747,10 @@ input[type="range"]::-webkit-slider-thumb{
 
 .pl-\[40px\]{
   padding-left: 40px;
+}
+
+.pr-2{
+  padding-right: 0.5rem;
 }
 
 .pr-8{
@@ -2917,6 +3018,10 @@ input[type="range"]::-webkit-slider-thumb{
 
 .focus\:outline-\[\#EBDD36\]:focus{
   outline-color: #EBDD36;
+}
+
+.focus\:outline-\[rgb\(36\2c 48\2c 63\)\]:focus{
+  outline-color: rgb(36,48,63);
 }
 
 .focus\:outline-\[transparent\]:focus{
