--- a/src/styles.css
+++ b/src/styles.css
@@ -459,4 +459,11 @@
         display: none !important;
     }
 
+    .searchadmin{
+        position: relative;
+        font-size: 25px;
+        font-weight: lighter;
+        top: 5px;
+        color: rgba(255, 255, 255, 0.8);
+    }
 }
