--- a/public/styles.css
+++ b/public/styles.css
@@ -1688,10 +1688,6 @@ input[type="range"]::-webkit-slider-thumb{
   top: 37%;
 }
 
-.top-\[450px\]{
-  top: 450px;
-}
-
 .top-\[48\%\]{
   top: 48%;
 }
@@ -2175,6 +2171,10 @@ input[type="range"]::-webkit-slider-thumb{
   height: 300px;
 }
 
+.h-\[345px\]{
+  height: 345px;
+}
+
 .h-\[400px\]{
   height: 400px;
 }
@@ -2217,6 +2217,10 @@ input[type="range"]::-webkit-slider-thumb{
 
 .h-\[600px\]{
   height: 600px;
+}
+
+.h-\[60px\]{
+  height: 60px;
 }
 
 .h-\[80\%\]{
@@ -2323,6 +2327,10 @@ input[type="range"]::-webkit-slider-thumb{
   width: 1000px;
 }
 
+.w-\[1011px\]{
+  width: 1011px;
+}
+
 .w-\[110px\]{
   width: 110px;
 }
@@ -2357,6 +2365,10 @@ input[type="range"]::-webkit-slider-thumb{
 
 .w-\[21\%\]{
   width: 21%;
+}
+
+.w-\[225px\]{
+  width: 225px;
 }
 
 .w-\[238px\]{
@@ -2453,6 +2465,10 @@ input[type="range"]::-webkit-slider-thumb{
 
 .w-\[80\%\]{
   width: 80%;
+}
+
+.w-\[88\%\]{
+  width: 88%;
 }
 
 .w-\[90\%\]{
@@ -2760,6 +2776,11 @@ input[type="range"]::-webkit-slider-thumb{
 .bg-\[rgb\(49\2c 49\2c 49\)\]{
   --tw-bg-opacity: 1;
   background-color: rgb(49 49 49 / var(--tw-bg-opacity));
+}
+
+.bg-\[rgb\(49\2c 61\2c 74\)\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(49 61 74 / var(--tw-bg-opacity));
 }
 
 .bg-\[rgba\(0\2c 0\2c 0\2c 0\.5\)\]{
@@ -3074,9 +3095,19 @@ input[type="range"]::-webkit-slider-thumb{
   color: rgb(245 158 11 / var(--tw-text-opacity));
 }
 
+.text-blue-500{
+  --tw-text-opacity: 1;
+  color: rgb(59 130 246 / var(--tw-text-opacity));
+}
+
 .text-gray-400{
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
+.text-green-500{
+  --tw-text-opacity: 1;
+  color: rgb(34 197 94 / var(--tw-text-opacity));
 }
 
 .text-red-400{
